# tcppy-calculation-service

./: Cargo.toml  Procfile  README.md
src/: main.rs
src/adapter/presenter/: mod.rs
src/adapter/presenter/decimal/: mod.rs  multiplication_json_presenter.rs
src/adapter/presenter/fraction/: add_json_presenter.rs  addition_json_presenter.rs  mod.rs
src/application/: mod.rs
src/application/decimal/multiplication/: usecase.rs  usecase_output.rs
src/application/fraction/add/: mod.rs  usecase.rs  usecase_output.rs
src/application/fraction/addition/: usecase.rs  usecase_output.rs
src/domain/: mod.rs
src/domain/model/: fraction.rs  mod.rs
src/domain/model/fraction/: fraction.rs  fraction_add_calculation_process.rs  fraction_addition_calculation_process.rs  mod.rs
src/server/: mod.rs
src/server/handler/: decimal_handler.rs  fraction_handler.rs  mod.rs
