[package]
name = "Tcppy-calculation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
serde = { version = "1.0", features = ["derive"] }

diesel = { version = "1.4.8", features = ["mysql", "r2d2"]}
dotenv = "0.13.0"